blurri tehty bottombar bugaa

--- a/junction/src/Landingpage.css
+++ b/junction/src/Landingpage.css
@@ -235,7 +235,7 @@ code {
   max-width: 1000px; 
   margin: 0 auto;    
   
-  position: absolute;
+
   left: 0;
   right: 0;
   bottom: 40px;      
